[gd_scene load_steps=4 format=3 uid="uid://bxvw8y7qkqx6"]

[ext_resource type="Script" uid="uid://dmw8yx5lbmqy2" path="res://actors/PatrolEnemy.gd" id="1_enemy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_enemy"]
size = Vector2(24, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jc0bi"]
size = Vector2(30, 31)

[node name="PatrolEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_enemy")
enemy_type = null
patrol_speed = null
patrol_distance = null
damage_amount = null
points_value = null
health = null
detection_range = null

[node name="EnemySprite" type="ColorRect" parent="."]
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
color = Color(0, 0.8, 0, 1)

[node name="EnemyLabel" type="Label" parent="."]
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
theme_override_font_sizes/font_size = 14
text = "ðŸ‘¹"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_enemy")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_jc0bi")

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("RectangleShape2D_jc0bi")
